fix meter position on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -184,6 +184,7 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 0.3em;
 }
 .flex-between {
@@ -299,43 +300,18 @@ section {
                 margin-inline: auto;
                 padding-top: 1em;
                 position: relative;
-
                 .pointer__wrapper {
                     position: absolute;
-                    bottom: -10px;
                     left: 50%;
                     transform: translateX(-51.5%);
                     height: 50px;
                     width: 75px;
                     display: inline-block;
+                    bottom: 10px;
+                    @media (min-width: 500px) {
+                        bottom: -10px;
+                    }
                 }
-                // .score-pointer-test {
-                //     position: absolute;
-                //     bottom: 1em;
-                //     left: 0;
-                //     height: 180px;
-                //     width: 75px;
-                //     transform-origin: 50% 85%;
-                //     background: purple;
-                //     rotate: 50deg;
-                //     span {
-                //         position: absolute;
-                //         width: 100%;
-                //         height: 100%;
-                //         transform: scale(0.001);
-                //         transform-origin: inherit;
-                //     }
-                //     span::after {
-                //         content: '';
-                //         display: block;
-                //         width: 10px;
-                //         height: 10px;
-                //         border-radius: 100%;
-                //         background: rgba(255, 128, 128, 0.75);
-                //         transform: scale(1000);
-                //     }
-                //     // animation: rotate 5s infinite;
-                // }
                 .score-pointer {
                     // background: red;
                     display: block;
